--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:              anshul.madnawat@gmail.com
 description:        Personal Blog
 author:             Anshul Madnawat
 baseurl:            ""
-url:                "pblog"
+url:                ""
 
 # Social Profiles
 twitter_username:   
