--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Anshul Blog
 email: anshul.madnawat@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
+description: >- Welcome to my personal blog
 baseurl: "/pblog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  anshulm333
